<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText

        android:id="@+id/edittext_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hintp"
        android:layout_marginTop="20dp"
        android:maxLength="6"/>

    <EditText

        android:id="@+id/edittext_altura"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/hintA"
        android:maxLength="6"/>

    <ImageView
        android:id="@+id/imgpeso"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/peso"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/edittext_peso" />

    <ImageView
        android:id="@+id/imgaltura"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/altura"
        android:layout_marginTop="60dp"
        android:layout_alignEnd="@+id/edittext_peso"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click"/>


</RelativeLayout>